2015-11-25  Jean-Louis Martineau <martineau@zmanda.com>
	* perl/Amanda/Service/Amidxtaped.pm: New amidxtaped perl module, it
	  use Amanda::Restore
	* server-src/amidxtaped.pl: Use Amanda::Service::Amidxtaped
	* recover-src/amrecover.c, recover-src/extract_list.c: improve
	  amrecover-amidxtaped protocol

2015-11-25  Jean-Louis Martineau <martineau@zmanda.com>
	* perl/Amanda/Restore.pm: New module to to do a recovery, all program
	  will use it.
	* perl/Makefile.am: Add Amanda/Restore.pm

2015-11-25  Jean-Louis Martineau <martineau@zmanda.com>
	* perl/Amanda/Amservice.pm: New perl module to execute amservive
	* perl/Makefile.am: Add Amanda/Amservice.pm

2015-11-25  Jean-Louis Martineau <martineau@zmanda.com>
	* common-src/amservice.c: Add --stream and --config option, use
	  security_stream_write_async

2015-11-25  Jean-Louis Martineau <martineau@zmanda.com>
	* common-src/bsd-security.c, common-src/bsdtcp-security.c,
	  common-src/bsdudp-security.c, common-src/krb5-security.c,
	  common-src/local-security.c, common-src/rsh-security.c,
	  common-src/security-util.c, common-src/security-util.h,
	  common-src/security.c, common-src/security.h,
	  common-src/ssh-security.c,
	  common-src/ssl-security.c: Fix security API and add
	  security_stream_write_async and security_stream_close_async

2015-11-20  Jean-Louis Martineau <martineau@zmanda.com>
	* perl/Amanda/DB/Catalog.pm: Filter with the status
	* perl/Amanda/Recovery/Planner.pm: Pass the status to
	  Amanda::DB::Catalog::get_dumps
	* perl/Amanda/FetchDump.pm, perl/Amanda/CheckDump.pm,
	  perl/Amanda/Taper/Worker.pm, perl/Amanda/Vault.pm,
	  server-src/amreindex.pl: Call Amanda::Recovery::Planner::make_plan
	  with a "status => 'OK'" argument

2015-11-12  Jean-Louis Martineau <martineau@zmanda.com>
	* server-src/driver.c (handle_taper_result): Set job to NULL
	* server-src/driverio.c: Improve debugging
	* file server-src/planner.c (est_dump_queue): Fix crash

2015-11-11  Jean-Louis Martineau <martineau@zmanda.com>