@@ -47,8 +47,6 @@ static GObjectClass *parent_class = NULL;
 
 typedef struct XferDestFd {
     XferElement __parent__;
-
-    gint fd;
 } XferDestFd;
 
 /*
@@ -63,29 +61,6 @@ typedef struct {
  * Implementation
  */
 
-static gboolean
-setup_impl(
-    XferElement *elt)
-{
-    XferDestFd *self = XFER_DEST_FD(elt);
-
-    /* We keep a *copy* of this fd, because our caller will close it to
-     * indicate EOF */
-    g_assert(xfer_element_swap_input_fd(elt, dup(self->fd)) == -1);
-
-    return TRUE;
-}
-
-static void
-finalize_impl(
-    GObject * obj_self)
-{
-    XferDestFd *self = XFER_DEST_FD(obj_self);
-
-    close(self->fd);
-    self->fd = -1;
-}
-
 static void
 instance_init(
     XferElement *elt)
@@ -99,14 +74,10 @@ class_init(
     XferDestFdClass * selfc)
 {
     XferElementClass *klass = XFER_ELEMENT_CLASS(selfc);
-    GObjectClass *goc = G_OBJECT_CLASS(selfc);
     static xfer_element_mech_pair_t mech_pairs[] = {
 	{ XFER_MECH_WRITEFD, XFER_MECH_NONE, XFER_NROPS(0), XFER_NTHREADS(0) },
 	{ XFER_MECH_NONE, XFER_MECH_NONE, XFER_NROPS(0), XFER_NTHREADS(0) },
     };
-
-    klass->setup = setup_impl;
-    goc->finalize = finalize_impl;
 
     klass->perl_class = "Amanda::Xfer::Dest::Fd";
     klass->mech_pairs = mech_pairs;
@@ -146,9 +117,14 @@ xfer_dest_fd(
 {
     XferDestFd *self = (XferDestFd *)g_object_new(XFER_DEST_FD_TYPE, NULL);
     XferElement *elt = XFER_ELEMENT(self);
+    int old_fd;
 
     g_assert(fd >= 0);
-    self->fd = dup(fd);
+
+    /* we keep a *copy* of this fd, because our caller will close it to
+     * indicate EOF */
+    old_fd = xfer_element_swap_input_fd(elt, dup(fd));
+    g_assert(old_fd == -1);
 
     return elt;
 }
